--- a/experiments/config.yaml
+++ b/experiments/config.yaml
@@ -1,9 +1,10 @@
-summ_scalar_intvl: 1
-summ_image_intvl: 1
-summ_image_count: 10
+ckpt_intvl: 1000
+summ_image_count: 8
 
 phase_param:
   train:
+    num_slots: 4
+  valid:
     num_slots: 4
   test:
     num_slots: 4
@@ -12,19 +13,18 @@ phase_param:
 
 loss_coef:
   temp:
-    epoch: []
+    step: []
     value: [2.0, 0.5]
     linear: [false]
   bck_prior:
-    epoch: []
+    step: []
     value: [1.0, 1.0]
     linear: [true]
 
 normal_scale: 0.3
 lr: 5.0e-4
 batch_size: 128
-num_workers: 1
-num_epochs: 200
+num_steps: 200000
 num_tests: 5
 seg_overlap: false
 
